--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Git lesson2</h1>
+        <h2>Changes for rebase</h2>
         <p>Прежде всего, укрепление и развитие внутренней структуры предполагает независимые способы реализации вывода текущих активов. С другой стороны, высококачественный прототип будущего проекта выявляет срочную потребность системы массового участия. Тщательные исследования конкурентов, инициированные исключительно синтетически, превращены в посмешище, хотя само их существование приносит несомненную пользу обществу.</p>
         
     </body>
