--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>     
-        
+        <h1>Add</h1>
     </body>
 </html>
